--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="http://d3js.org/d3-queue.v2.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
-    <script src="lib/crossfilter/crossfilter.js"></script>
   
     <!--<script src="data/boston_regions_zip_codes_rdw.json"></script>-->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
@@ -59,8 +58,8 @@
         <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script src="https://d3js.org/d3-queue.v2.min.js"></script>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="lib/crossfilter/crossfilter.js"></script>
+        <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src=".././lib/crossfilter/crossfilter.js"></script>
 
         <!--<script src="scripts/map.js"></script>-->
         <script src="stationChart.js"></script>
