--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <script src="https://d3js.org/d3-queue.v2.min.js"></script>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src=".././lib/crossfilter/crossfilter.js"></script>
+        <script src="./lib/crossfilter/crossfilter.js"></script>
 
         <!--<script src="scripts/map.js"></script>-->
         <script src="stationChart.js"></script>
